--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Ad Blocker Pro",
+  "name": "Blocker Pro",
   "version": "1.0.0",
   "description": "Потужний блокувальник реклами для Chrome",
   "permissions": [
